# square_commons

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: pytest.yaml
square_commons/: __init__.py  api_utils.py  config_reader.py  email.py
tests/: test_api_utils.py  test_config_reader.py
usage/api_utils/: main.py
usage/config_reader/: config.ini  main.py
usage/email/: main.py
