[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square_commons"
version = "3.0.3"
description = "helper module containing common functions for all my python modules."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.12"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_commons" }
keywords = ["utilities", "helpers", "common"]
dependencies = [
    "configparser>=6.0.0",
    "requests>=2.32.3",
    "Deprecated>=1.2.18",
]
optional-dependencies = { all = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0"], dev = ["pytest>=8.3.3",
    "pytest-mock>=3.14.0"] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.hatch.build.targets.wheel]
packages = ["square_commons"]
